editor-components/call_to_action/call_to_action15/call_to_action15.module.scss
@use '../../../composer-base-components/base/utitilities/viewports.module.scss' as *;

.container{
    background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
    .max-content{
        display: flex;
        flex-direction: column;
        .header{
            display: flex;
            flex-direction: column;
            gap: var(--composer-gap-sm);
            align-items: center; 
            width: 100%;
            .subtitle{
                text-align: center;
                transform: translateX(0) !important;
                margin: 0 auto;
                &::before{
                    display: none;
                }
            }
            .title{
                text-align: center;
                width: 100%;
            }
            .description{
                text-align: center;
            }
        }
       
    }
    .button-container{
        display: flex;
        flex-wrap: wrap;
        gap: var(--composer-gap-sm);
        justify-content: center;
        .button{
            .button-text{
                content: "";
            }
        }
    }
}

