fix(card): remove extra spacing from vertical content items

--- a/editor-components/call_to_action/call_to_action15/call_to_action15.module.scss
+++ b/editor-components/call_to_action/call_to_action15/call_to_action15.module.scss
@@ -8,7 +8,6 @@
         .header{
             display: flex;
             flex-direction: column;
-            gap: var(--composer-gap-sm);
             align-items: center; 
             width: 100%;
             .subtitle{
